# pixel-party

./: .gitignore  CMakeLists.txt  README.md
ressources/lang/: en-US.json  fr-FR.json
src/: main.cpp
